--- a/client/app/pages/listen-intervent-page/listen-intervent-page.html
+++ b/client/app/pages/listen-intervent-page/listen-intervent-page.html
@@ -6,7 +6,7 @@
     <ion-header padding>
         <ion-navbar>
             <ion-title>
-                {{intervent.title}} - {{intervent.date}} Durata: {{intervent.duration}} minuti
+                {{intervent.title}} - {{formatDate(intervent.date)}} Durata: {{formatDate(intervent.duration)}} minuti
             </ion-title>
         </ion-navbar>
     </ion-header>
