--- a/client/app/pages/modals/intervent/intervent-modal.html
+++ b/client/app/pages/modals/intervent/intervent-modal.html
@@ -22,7 +22,7 @@
     </ion-item>
     <div *ngIf="((date.value+duration.value)>session.endDate) && duration.touched">L'Intervento deve terminare durante la Sessione!</div>
 
-    <div *ngIf="overlapError.status">L'Intervento si sovrappone con "{{overlapError.intervent.title}}" programmato il {{overlapError.intervent.date}}, durata {{overlapError.intervent.duration}} minuti</div>
+    <div *ngIf="overlapError.status">L'Intervento si sovrappone con "{{overlapError.intervent.title}}" programmato il {{formatDate(overlapError.intervent.date)}}, durata {{overlapError.intervent.duration}} minuti</div>
 
     <ion-item >
         <ion-label inline>Speaker (username)</ion-label>
