--- a/client/app/pages/joined-events-page/joined-events-page.html
+++ b/client/app/pages/joined-events-page/joined-events-page.html
@@ -28,7 +28,7 @@
                     </button>
                 </ion-buttons>
             </ion-toolbar>
-            Dal: {{event.startDate}} - Al: {{event.endDate}}
+            Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}
         </ion-card-header>
         <ion-card-content>
           <p>
@@ -41,14 +41,14 @@
               <p>
                 <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
                 <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
-                  {{session.title}} - {{session.startDate}}
+                  {{session.title}} - {{formatDate(session.startDate)}}
               </p>
               <ion-list *ngIf="session.expanded">
                 <ion-item text-wrap *ngFor="let intervent of session.intervents">
                   <p>
                     <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
                     <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
-                    {{intervent.title}} - {{intervent.date}} --- {{intervent.status}}
+                    {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
                   </p>
                   <p *ngIf="intervent.expanded">
                       {{intervent.text}}
