Bug fix, aggiunti log per test

--- a/client/app/pages/intervent-page/intervent-page.html
+++ b/client/app/pages/intervent-page/intervent-page.html
@@ -4,7 +4,7 @@
 
 <ion-content padding>
     <ion-header padding>
-        <ion-navbar>
+        <ion-navbar [hideBackButton]="recognizing || room!=null">
             <ion-title>
                 {{intervent.title}} - {{formatDate(intervent.date)}} Durata: {{intervent.duration}} minuti
             </ion-title>
