Restyle dei sottotitoli delle card

--- a/client/app/pages/event-page/event-page.html
+++ b/client/app/pages/event-page/event-page.html
@@ -78,7 +78,7 @@
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
-                Dal: {{formatDate(session.startDate)}} - Al: {{formatDate(session.endDate)}}
+                <ion-item text-wrap>Dal: {{formatDate(session.startDate)}} - Al: {{formatDate(session.endDate)}}</ion-item>
             </ion-card-header>
         </ion-card>
     </ion-list>
