--- a/client/app/pages/joined-events-page/joined-events-page.html
+++ b/client/app/pages/joined-events-page/joined-events-page.html
@@ -28,7 +28,7 @@
                     </button>
                 </ion-buttons>
             </ion-toolbar>
-            Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}
+            <ion-item text-wrap>Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}</ion-item>
         </ion-card-header>
         <ion-card-content>
           <p>
