--- a/client/app/pages/session-page/session-page.html
+++ b/client/app/pages/session-page/session-page.html
@@ -72,7 +72,7 @@
                         </button>
                     </ion-buttons>
                 </ion-toolbar>
-                Data: {{formatDate(intervent.date)}} - ({{intervent.duration}} minuti)
+                <ion-item text-wrap>Data: {{formatDate(intervent.date)}} - ({{intervent.duration}} minuti)</ion-item>
             </ion-card-header>
         </ion-card>
     </ion-list>
