--- a/client/app/pages/intervent-page/intervent-page.html
+++ b/client/app/pages/intervent-page/intervent-page.html
@@ -6,7 +6,7 @@
     <ion-header padding>
         <ion-navbar [hideBackButton]="recognizing || room!=null">
             <ion-title>
-                {{intervent.title}} - {{formatDate(intervent.date)}} Durata: {{intervent.duration}} minuti
+                <ion-item text-wrap>{{intervent.title}} - {{formatDate(intervent.date)}} Durata: {{intervent.duration}} minuti</ion-item>
             </ion-title>
             <ion-buttons *ngIf="!updating && intervent.status=='programmed'" end>
                 <button (click)="updating=!updating">
