--- a/client/app/pages/personal-page/personal-page.html
+++ b/client/app/pages/personal-page/personal-page.html
@@ -4,9 +4,9 @@
     
     <ion-buttons begin>
       <button>
-        <ion-title>
-          Scriba
-        </ion-title>
+        <ion-nav-title>
+          <h3>Scriba</h3>
+        </ion-nav-title>
       </button>
 
       <button (click)="userData()" start>
