--- a/client/app/pages/home-page/home-page.html
+++ b/client/app/pages/home-page/home-page.html
@@ -1,18 +1,160 @@
-<ion-header>
+<ion-header padding>
   <ion-navbar>
-
+      <ion-segment [(ngModel)]="events">
+        <ion-segment-button value="programmed">
+            Eventi Programmati
+        </ion-segment-button>
+        <ion-segment-button value="ongoing">
+            Eventi In Corso
+        </ion-segment-button>
+        <ion-segment-button value="passed">
+            Eventi Passati
+        </ion-segment-button>
+    </ion-segment>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <ion-header padding>
-      <ion-navbar>
-          <ion-title>
-              Tutti Gli Eventi Pubblici
-          </ion-title>
-      </ion-navbar>
-    </ion-header>
+    <div [ngSwitch]="events">
+        <ion-list *ngSwitchCase="'programmed'">
+            <ion-card *ngFor="let event of programmedEvents">
+                <ion-card-header>
+                    <ion-toolbar>
+                        <ion-title>
+                            {{event.title}} (@{{event.location}})
+                        </ion-title>
+                        <ion-buttons end>
+                            <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                                <ion-icon name="play"> </ion-icon>
+                            </button>
+                        </ion-buttons>
+                    </ion-toolbar>
+                    <ion-item text-wrap>Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}</ion-item>
+                </ion-card-header>
+                <ion-card-content>
+                <p>
+                    <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    Sessioni 
+                </p>
+                <ion-list *ngIf="event.expanded">
+                    <ion-item text-wrap *ngFor="let session of event.sessions">
+                    <p>
+                        <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        {{session.title}} - {{formatDate(session.startDate)}}
+                    </p>
+                    <ion-list *ngIf="session.expanded">
+                        <ion-item text-wrap *ngFor="let intervent of session.intervents">
+                        <p>
+                            <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
+                        </p>
+                        <p *ngIf="intervent.expanded">
+                            {{intervent.text}}
+                        </p>
+                        </ion-item>
+                    </ion-list>
+                    </ion-item>
+                </ion-list>
+                </ion-card-content>
+            </ion-card>
+        </ion-list>
 
+        <ion-list *ngSwitchCase="'ongoing'">
+            <ion-card *ngFor="let event of ongoingEvents">
+                <ion-card-header>
+                    <ion-toolbar>
+                        <ion-title>
+                            {{event.title}} (@{{event.location}})
+                        </ion-title>
+                        <ion-buttons end>
+                            <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                                <ion-icon name="play"> </ion-icon>
+                            </button>
+                        </ion-buttons>
+                    </ion-toolbar>
+                    <ion-item text-wrap>Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}</ion-item>
+                </ion-card-header>
+                <ion-card-content>
+                <p>
+                    <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    Sessioni 
+                </p>
+                <ion-list *ngIf="event.expanded">
+                    <ion-item text-wrap *ngFor="let session of event.sessions">
+                    <p>
+                        <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        {{session.title}} - {{formatDate(session.startDate)}}
+                    </p>
+                    <ion-list *ngIf="session.expanded">
+                        <ion-item text-wrap *ngFor="let intervent of session.intervents">
+                        <p>
+                            <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
+                        </p>
+                        <p *ngIf="intervent.expanded">
+                            {{intervent.text}}
+                        </p>
+                        </ion-item>
+                    </ion-list>
+                    </ion-item>
+                </ion-list>
+                </ion-card-content>
+            </ion-card>
+        </ion-list>
+
+        <ion-list *ngSwitchCase="'passed'">
+            <ion-card *ngFor="let event of passedEvents">
+                <ion-card-header>
+                    <ion-toolbar>
+                        <ion-title>
+                            {{event.title}} (@{{event.location}})
+                        </ion-title>
+                        <ion-buttons end>
+                            <button *ngIf="event.status=='ongoing'" (click)="openEvent(event)">
+                                <ion-icon name="play"> </ion-icon>
+                            </button>
+                        </ion-buttons>
+                    </ion-toolbar>
+                    <ion-item text-wrap>Dal: {{formatDate(event.startDate)}} - Al: {{formatDate(event.endDate)}}</ion-item>
+                </ion-card-header>
+                <ion-card-content>
+                <p>
+                    <ion-icon *ngIf="!event.expanded" name="arrow-dropdown" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    <ion-icon *ngIf="event.expanded" name="arrow-dropup" (click)="event.expanded=!event.expanded"></ion-icon> 
+                    Sessioni 
+                </p>
+                <ion-list *ngIf="event.expanded">
+                    <ion-item text-wrap *ngFor="let session of event.sessions">
+                    <p>
+                        <ion-icon *ngIf="!session.expanded" name="arrow-dropdown" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        <ion-icon *ngIf="session.expanded" name="arrow-dropup" (click)="session.expanded=!session.expanded"></ion-icon> 
+                        {{session.title}} - {{formatDate(session.startDate)}}
+                    </p>
+                    <ion-list *ngIf="session.expanded">
+                        <ion-item text-wrap *ngFor="let intervent of session.intervents">
+                        <p>
+                            <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                            {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
+                        </p>
+                        <p *ngIf="intervent.expanded">
+                            {{intervent.text}}
+                        </p>
+                        </ion-item>
+                    </ion-list>
+                    </ion-item>
+                </ion-list>
+                </ion-card-content>
+            </ion-card>
+        </ion-list>
+    </div>
+<!--
     <ion-card *ngFor="let event of events">
         <ion-card-header>
             <ion-toolbar>
@@ -43,12 +185,18 @@
               <ion-list *ngIf="session.expanded">
                 <ion-item text-wrap *ngFor="let intervent of session.intervents">
                   <p>
+                    <ion-icon *ngIf="!intervent.expanded" name="arrow-dropdown" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
+                    <ion-icon *ngIf="intervent.expanded" name="arrow-dropup" (click)="intervent.expanded=!intervent.expanded"></ion-icon> 
                     {{intervent.title}} - {{formatDate(intervent.date)}} --- {{intervent.status}}
-                  </p>    
+                  </p>
+                  <p *ngIf="intervent.expanded">
+                      {{intervent.text}}
+                  </p>
                 </ion-item>
               </ion-list>
             </ion-item>
           </ion-list>
         </ion-card-content>
     </ion-card>
+-->
 </ion-content>
