--- a/client/app/pages/session-page/session-page.html
+++ b/client/app/pages/session-page/session-page.html
@@ -53,7 +53,7 @@
             </ion-title>
             <ion-buttons end>
                 <button (click)="newIntervent()">
-                <ion-icon name="add"> Nuovo Intervento</ion-icon>
+                <ion-icon name="add"><span *ngIf="!mobile"> Nuovo Intervento</span></ion-icon>
                 </button>
             </ion-buttons>    
         </ion-toolbar>
