--- a/client/app/pages/tabs/tabs.html
+++ b/client/app/pages/tabs/tabs.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Scriba
-    </ion-title>
+    <ion-nav-title>
+      <h1>Scriba</h1>
+    </ion-nav-title>
 
     <ion-buttons end>
       <button (click)="login()">
