risoluzione bug (checkpoint for server changes)

--- a/client/app/pages/intervent-page/intervent-page.html
+++ b/client/app/pages/intervent-page/intervent-page.html
@@ -73,7 +73,7 @@
         </ion-card-header>
 
         <ion-card-content id="text">
-            {{intervent.text}}
+            Lo Speaker dice: {{intervent.text}} {{transcription}}
         </ion-card-content>
         <ion-item>
             <button *ngIf="room!=null" (click)="saveAndCloseRoom()" [disabled]="recognizing">
