--- a/client/app/pages/listen-intervent-page/listen-intervent-page.html
+++ b/client/app/pages/listen-intervent-page/listen-intervent-page.html
@@ -37,6 +37,7 @@
             </ion-item>
         </ion-card-header>
         <ion-card-content id="text">
+            {{transcription}}
         </ion-card-content>
     </ion-card>
     
