--- a/client/app/pages/intervent-page/intervent-page.html
+++ b/client/app/pages/intervent-page/intervent-page.html
@@ -71,9 +71,9 @@
                 </ion-buttons>
             </ion-toolbar>
         </ion-card-header>
-
+        <span padding>Lo Speaker dice:</span>
         <ion-card-content id="text">
-            Lo Speaker dice: {{intervent.text}} {{transcription}}
+            {{intervent.text}} {{transcription}}
         </ion-card-content>
         <ion-item>
             <button *ngIf="room!=null" (click)="saveAndCloseRoom()" [disabled]="recognizing">
@@ -92,7 +92,7 @@
         <ion-card-content>
             <ion-list>
                 <ion-item *ngFor="let quest of intervent.questions">
-                    {{quest}}
+                    {{quest.user}}: {{quest.text}}
                 </ion-item>
             </ion-list>
         </ion-card-content>
