--- a/client/app/pages/listen-intervent-page/listen-intervent-page.html
+++ b/client/app/pages/listen-intervent-page/listen-intervent-page.html
@@ -36,8 +36,25 @@
                 </button>
             </ion-item>
         </ion-card-header>
+        <span padding>Lo Speaker dice:</span>
         <ion-card-content id="text">
             {{transcription}}
+        </ion-card-content>
+    </ion-card>
+    <ion-card >
+        <ion-card-header>
+            <ion-toolbar>
+                <ion-title>
+                    Domande
+                </ion-title>
+            </ion-toolbar>
+        </ion-card-header>
+        <ion-card-content>
+            <ion-list>
+                <ion-item *ngFor="let quest of intervent.questions">
+                    {{quest.user}}: {{quest.text}}
+                </ion-item>
+            </ion-list>
         </ion-card-content>
     </ion-card>
     
