--- a/client/app/pages/about-page/about-page.html
+++ b/client/app/pages/about-page/about-page.html
@@ -12,18 +12,18 @@
 
 <ion-content padding>
   <p>
-    Ionic was founded in 2012, when using web technologies as a means to build native apps was still in its infancy. When we started, we just wanted to create a better way for web developers to use their existing skillsets to build apps for the app stores.
+    Scriba nasce da un lavoro di tesi svolto nell'ambito della collaborazione tra Informatici Senza Frontiere (ISF) e l'Università degli studi di Bari "Aldo moro", per la precisione con il Prof. Filippo Lanubile del Dipartimento di Informatica.
   </p>
 
   <p>
-    Today, Ionic is the world's most popular cross-platform mobile development technology stack, powering fast growing startups to some of the biggest companies in the world.
+    Il progetto Scriba è stato avviato da Giuseppe Iaffaldano, laureando per l'anno accademico 2015/2016 e si propone di fornire supporto a persone non udenti per includerle in contesti sociali come un qualsivoglia tipo di evento.
   </p>
 
   <p>
-    Millions of developers from nearly every industry around the world have built millions of mobile apps with Ionic. Our Framework and Platform allow developers to use web technologies to build high quality hybrid mobile apps, and then scale those apps simply with services like user auth, push notifications, live deployments, and more.
+    Scriba prevede che un utente (Organizzatore) crei un evento programmandone data, luogo, sessioni ed interventi; che uno o più speaker utilizzino un microfono per esporre le proprie argomentazioni durante una conferenza e che uno o più utenti partecipanti, attraverso uno smartphone, possano ricevere in tempo reale la trascrizione di quello che viene proferito.
   </p>
 
   <p>
-    Ionic not only makes app development easier, faster, and more accessible—it makes it more fun. Mobile is all about finding new ways to change the way humans interact with the world, and we couldn’t think of anything more fun than that.
+    Al momento Scriba è ad un punto di partenza, sicuramente ha le potenzialità per diventare un'ottima soluzione a costo zero per chi volesse coinvolgere soggetti non udenti a partecipare ai propri eventi.
   </p>
 </ion-content>
