--- a/client/app/pages/listen-intervent-page/listen-intervent-page.html
+++ b/client/app/pages/listen-intervent-page/listen-intervent-page.html
@@ -6,7 +6,7 @@
     <ion-header padding>
         <ion-navbar>
             <ion-title>
-                {{intervent.title}} - {{formatDate(intervent.date)}} Durata: {{intervent.duration}} minuti
+                {{intervent.title}}
             </ion-title>
             <ion-buttons end>
                 <button (click)="questioning=!questioning">
@@ -15,6 +15,18 @@
             </ion-buttons>
         </ion-navbar>
     </ion-header>
+    <ion-item>
+        <ion-row>
+            <ion-col>
+                Il: {{formatDate(intervent.date)}}
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col>
+                Durata: {{intervent.duration}} minuti
+            </ion-col>
+        </ion-row>
+    </ion-item>
     <form *ngIf="questioning" (ngSubmit)="sendQuestion()" #questionForm="ngForm">
         <ion-item >
             <ion-label inline>La tua Domanda</ion-label>
