--- a/client/app/pages/modals/event/event-modal.html
+++ b/client/app/pages/modals/event/event-modal.html
@@ -14,13 +14,13 @@
         <ion-label inline>Data Inizio</ion-label>
         <ion-input type="datetime-local" ngControl="startDateControl" #sd="ngForm" [(ngModel)]="event.startDate" required></ion-input>
     </ion-item>
-    <div *ngIf="sd.value<=now && sd.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
+    <div *ngIf="sd.value<now && sd.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
     
     <ion-item>
         <ion-label inline>Data Termine</ion-label>
         <ion-input type="datetime-local" ngControl="endDateControl" #ed="ngForm" [(ngModel)]="event.endDate" required></ion-input>
     </ion-item>
-    <div *ngIf="sd.value>=ed.value && ed.touched">La Data di Termine deve essere POSTERIORE a quella di Inizio!</div>
+    <div *ngIf="sd.value>ed.value && ed.touched">La Data di Termine deve essere POSTERIORE a quella di Inizio!</div>
 
     <ion-item >
         <ion-label inline>Luogo</ion-label>
@@ -29,8 +29,8 @@
     
     <ion-item>
         <button type="submit" class="btn btn-standard" [disabled]="!eventForm.valid ||
-                                                                    (sd.value<=now && sd.touched) ||
-                                                                    (sd.value>=ed.value && ed.touched)">Salva</button>
+                                                                    (sd.value<now && sd.touched) ||
+                                                                    (sd.value>ed.value && ed.touched)">Salva</button>
         <button type="reset" (click)="close()">Annulla</button>
     </ion-item>
 </form>
