--- a/client/app/pages/joined-events-page/joined-events-page.html
+++ b/client/app/pages/joined-events-page/joined-events-page.html
@@ -13,6 +13,9 @@
       </ion-navbar>
     </ion-header>
 
+    <ion-card *ngIf="events.length==0">
+        Nessun Evento seguito!
+    </ion-card>
     <ion-card *ngFor="let event of events">
         <ion-card-header>
             <ion-toolbar>
