--- a/client/app/pages/observed-events-page/observed-events-page.html
+++ b/client/app/pages/observed-events-page/observed-events-page.html
@@ -12,7 +12,9 @@
           </ion-title>
       </ion-navbar>
     </ion-header>
-
+    <ion-card *ngIf="events.length==0">
+        Nessun Evento osservato!
+    </ion-card>
     <ion-card *ngFor="let event of events">
         <ion-card-header>
             <ion-toolbar>
