--- a/client/app/pages/personal-events-page/personal-events-page.html
+++ b/client/app/pages/personal-events-page/personal-events-page.html
@@ -21,7 +21,9 @@
           </ion-buttons>
       </ion-navbar>
     </ion-header>
-
+    <ion-card *ngIf="events.length==0">
+        Nessun Evento disponibile. Crea un Evento!
+    </ion-card>
     <ion-card *ngFor="let event of events">
         <ion-card-header>
             <ion-toolbar>
