--- a/client/src/pages/modals/login/login-modal.html
+++ b/client/src/pages/modals/login/login-modal.html
@@ -15,7 +15,7 @@
     </ion-item>   
 
     <ion-item>
-        <button type="submit" [disabled]="!loginForm.valid" class="btn btn-standard">Accedi</button>
-        <button type="reset" (click)="close()">Annulla</button>
+        <button ion-button type="submit" [disabled]="!loginForm.valid" class="btn btn-standard">Accedi</button>
+        <button ion-button type="reset" (click)="close()">Annulla</button>
     </ion-item>
 </form>
