--- a/client/src/pages/tabs/tabs.html
+++ b/client/src/pages/tabs/tabs.html
@@ -1,27 +1,36 @@
-<ion-header>
+<ion-header no-shadow no-border>
   <ion-navbar>
-   <!--<button>
-        <ion-nav-title>
-          <h3>Scriba</h3>
-        </ion-nav-title>>
-      </button>-->
+
+    <ion-title>
+      Scriba
+    </ion-title>
+
 
     <ion-buttons end>
-      <button (click)="login()">
+      <button ion-button large icon-start (click)="login()">
         <ion-icon name="log-in"> <span *ngIf="!mobile">Accedi</span></ion-icon>
       </button>
-      <button (click)="signUp()">
+      <button ion-button large icon-start (click)="signUp()">
         <ion-icon name="person-add"> <span *ngIf="!mobile">Registrati</span></ion-icon>
       </button>
     </ion-buttons>
+
   </ion-navbar>
 
 </ion-header>
 
+<ion-content no-bounce>
+  <ion-tabs tabsPlacement="top" tabsHighlight="true">
+    <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Informazioni" tabIcon="information-circle"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Contatti" tabIcon="contacts"></ion-tab>
+  </ion-tabs>
+</ion-content>
 
 
-<ion-tabs>
+
+<!--<ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Informazioni" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contatti" tabIcon="contacts"></ion-tab>
-</ion-tabs>
+</ion-tabs>-->
