--- a/client/src/pages/modals/intervent/intervent-modal.html
+++ b/client/src/pages/modals/intervent/intervent-modal.html
@@ -1,39 +1,44 @@
-<ion-toolbar>
-    <ion-title>
-        Dati Nuovo Intervento
-    </ion-title>
-</ion-toolbar>
-<form (ngSubmit)="submit()" #interventForm="ngForm">
-    <ion-item >
-        <ion-label inline>Titolo</ion-label>
-        <ion-input type="text" ngModel name="titleControl" [(ngModel)]="intervent.title" required></ion-input>
-    </ion-item>
+<ion-header>
+  <ion-toolbar>
+      <ion-title>
+          Dati Nuovo Intervento
+      </ion-title>
+  </ion-toolbar>
+</ion-header>
 
-    <ion-item >
-        <ion-label inline>Inizio</ion-label>
-        <ion-input type="datetime-local" ngModel name="timeControl" [(ngModel)]="intervent.date" #date="ngModel" required></ion-input>
-    </ion-item>
-    <div *ngIf="date.value<now && date.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
-    <div *ngIf="(date.value<trunc(session.startDate) || date.value>trunc(session.endDate)) && date.touched">La data di Inizio deve cadere durante la Sessione!</div>
+<ion-content padding>
+  <form (ngSubmit)="submit()" #interventForm="ngForm">
+      <ion-item >
+          <ion-label inline>Titolo</ion-label>
+          <ion-input type="text" ngModel name="titleControl" [(ngModel)]="intervent.title" required></ion-input>
+      </ion-item>
 
-    <ion-item >
-        <ion-label inline>Durata (minuti)</ion-label>
-        <ion-input type="number" ngModel name="durationControl" min="0" max="180" step="1" value="0" [(ngModel)]="intervent.duration" #duration="ngModel" required></ion-input>
-    </ion-item>
-    <div *ngIf="((date.value+duration.value)>session.endDate) && duration.touched">L'Intervento deve terminare durante la Sessione!</div>
+      <ion-item >
+          <ion-label inline>Inizio</ion-label>
+          <ion-input type="datetime-local" ngModel name="timeControl" [(ngModel)]="intervent.date" #date="ngModel" required></ion-input>
+      </ion-item>
+      <div *ngIf="date.value<now && date.touched">La data di Inizio deve essere POSTERIORE a questo momento!</div>
+      <div *ngIf="(date.value<trunc(session.startDate) || date.value>trunc(session.endDate)) && date.touched">La data di Inizio deve cadere durante la Sessione!</div>
 
-    <div *ngIf="overlapError.status">L'Intervento si sovrappone con "{{overlapError.intervent.title}}" programmato il {{formatDate(overlapError.intervent.date)}}, durata {{overlapError.intervent.duration}} minuti</div>
+      <ion-item >
+          <ion-label inline>Durata (minuti)</ion-label>
+          <ion-input type="number" ngModel name="durationControl" min="0" max="180" step="1" value="0" [(ngModel)]="intervent.duration" #duration="ngModel" required></ion-input>
+      </ion-item>
+      <div *ngIf="((date.value+duration.value)>session.endDate) && duration.touched">L'Intervento deve terminare durante la Sessione!</div>
 
-    <ion-item >
-        <ion-label inline>Speaker (username)</ion-label>
-        <ion-input type="text" ngModel name="speakerControl" class="form-control" [(ngModel)]="intervent.speaker" required></ion-input>
-    </ion-item>
+      <div *ngIf="overlapError.status">L'Intervento si sovrappone con "{{overlapError.intervent.title}}" programmato il {{formatDate(overlapError.intervent.date)}}, durata {{overlapError.intervent.duration}} minuti</div>
 
-    <ion-item>
-        <button type="submit" class="btn btn-standard" [disabled]="!interventForm.valid ||
-                                                                    (date.value<now && date.touched) ||
-                                                                    ((date.value<trunc(session.startDate) || date.value>trunc(session.endDate)) && date.touched) ||
-                                                                    (((date.value+duration.value)>session.endDate) && duration.touched)">Salva</button>
-        <button type="reset" (click)="close()">Annulla</button>
-    </ion-item>
-</form>
+      <ion-item >
+          <ion-label inline>Speaker (username)</ion-label>
+          <ion-input type="text" ngModel name="speakerControl" class="form-control" [(ngModel)]="intervent.speaker" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <button type="submit" class="btn btn-standard" [disabled]="!interventForm.valid ||
+                                                                      (date.value<now && date.touched) ||
+                                                                      ((date.value<trunc(session.startDate) || date.value>trunc(session.endDate)) && date.touched) ||
+                                                                      (((date.value+duration.value)>session.endDate) && duration.touched)">Salva</button>
+          <button type="reset" (click)="close()">Annulla</button>
+      </ion-item>
+  </form>
+</ion-content>
