--- a/client/src/pages/modals/login/login-modal.html
+++ b/client/src/pages/modals/login/login-modal.html
@@ -1,21 +1,24 @@
-<ion-toolbar>
-    <ion-title>
-        Accedi
-    </ion-title>
-</ion-toolbar>
-<form #loginForm="ngForm" (ngSubmit)="submit()">
-    <ion-item>
-        <ion-label floating>Username</ion-label>
-        <ion-input type="text" ngModel name="usernameControl" [(ngModel)]="username" minlength="4" pattern="[a-zA-z]+[0-9]*" required></ion-input>
-    </ion-item> 
-    
-    <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type="password" ngModel name="passwordControl" [(ngModel)]="password" minlength="8" #pwd="ngModel" required></ion-input>
-    </ion-item>   
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Accedi</ion-title>
+  </ion-toolbar>
+</ion-header>
 
-    <ion-item>
-        <button ion-button type="submit" [disabled]="!loginForm.valid" class="btn btn-standard">Accedi</button>
-        <button ion-button type="reset" (click)="close()">Annulla</button>
-    </ion-item>
-</form>
+<ion-content padding>
+  <form #loginForm="ngForm" (ngSubmit)="submit()">
+      <ion-item>
+          <ion-label floating>Username</ion-label>
+          <ion-input type="text" ngModel name="usernameControl" [(ngModel)]="username" minlength="4" pattern="[a-zA-z]+[0-9]*" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <ion-label floating>Password</ion-label>
+          <ion-input type="password" ngModel name="passwordControl" [(ngModel)]="password" minlength="8" #pwd="ngModel" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+          <button ion-button type="submit" [disabled]="!loginForm.valid" class="btn btn-standard">Accedi</button>
+          <button ion-button type="reset" (click)="close()">Annulla</button>
+      </ion-item>
+  </form>
+</ion-content>
